--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pradeep Kumar's Portfolio</title>
-    <link rel="stylesheet" href="./assets/reset.css " />
     <link rel="stylesheet" href="Assets/CSS/style.css" />
 </head>
 
@@ -28,7 +27,7 @@
                 <header>
                     <h2>About Me</h2>
                 </header>
-                <p>I have completed Masters in Business - International Business and a Professional Diploma in
+                <p>I have completed Masters in Business - International Business and a Diploma in Professional 
                     Accounting. Currently, I am working as an Accounting Manager, but I always had a dream of becoming a
                     Web / Software developer and to accomplish this dream I have joined Full stack web developer coding
                     bootcamp offered by University of Toronto and now I am learning to code in HTML, CSS, Javascript and
@@ -50,9 +49,7 @@
                         <h2>Horiseon Code Refactor</h2>
                         <p>HTML & CSS</p>
                     </figure>
-
                 </a>
-
             </section>
 
             <section id="contact">
